fixing spacing and adding favicon

--- a/src/articles/shared/article.scss
+++ b/src/articles/shared/article.scss
@@ -26,7 +26,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open sans', sans-serif;
 }
 
 a,
@@ -104,12 +104,16 @@ $portrait-image-size: 7.5rem;
 	max-width: $layout-size-xl;
 	margin-block-end: 2rem;
 	text-align: center;
+	padding: 0 2rem;
+	margin-block-start: 4rem;
 }
 
 .article-subheader {
 	font-size: $font-size-lg;
 	max-width: $layout-size-xl;
 	text-align: center;
+	padding: 0 2rem;
+	margin-block-end: 4rem;
 }
 
 .article-info {
@@ -150,7 +154,7 @@ $portrait-image-size: 7.5rem;
 }
 
 .article-text {
-	margin: 6em 0;
+	margin: 0;
 	font-size: $font-size-md;
 	text-align: start;
 
@@ -160,11 +164,16 @@ $portrait-image-size: 7.5rem;
 	&:last-child {
 		margin-block-end: 0;
 	}
+
+	& + .article-text {
+		margin-block-start: 4rem;
+	}
 }
 
 .article-quote-block {
 	display: flex;
 	flex-direction: column;
+	margin: 6rem 0;
 }
 
 .article-quote {
@@ -189,6 +198,22 @@ $portrait-image-size: 7.5rem;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin: 6rem 0;
+}
+
+.article-asset-aspect-ratio {
+	position: relative;
+	height: 0;
+	width: 100%;
+	padding-block-start: 56.25%;
+
+	> * {
+		position: absolute;
+		inset-block-start: 0;
+		inset-inline-start: 0;
+		height: 100%;
+		width: 100%;
+	}
 }
 
 .article-image {
@@ -270,6 +295,16 @@ $portrait-image-size: 7.5rem;
 
 	& > svg > path {
 		fill: $text-color-dark;
+	}
+}
+
+.article-heading {
+	margin-block-start: 4rem;
+	font-size: $font-size-lg;
+	margin-block-end: 2rem;
+
+	& + .article-text {
+		margin-block-start: 0;
 	}
 }
 
