--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,7 +24,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open sans', sans-serif;
 }
 
 a,
